--- a/YaWeather/Views/CustomView.xib
+++ b/YaWeather/Views/CustomView.xib
@@ -2,24 +2,80 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomView" customModule="YaWeather" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="200"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CustomView" customModule="YaWeather" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="198" height="132"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <subviews>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="jvL-up-ai4" userLabel="mainStack">
+                    <rect key="frame" x="0.0" y="0.0" width="198" height="132"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="x5i-YC-9kD">
+                            <rect key="frame" x="0.0" y="0.0" width="198" height="48"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+26°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ALk-I4-Zac">
+                                    <rect key="frame" x="0.0" y="0.0" width="98.666666666666671" height="48"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="40"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud.sun" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="aaG-9K-y26">
+                                    <rect key="frame" x="99.666666666666686" y="0.6666666666666643" width="99" height="47"/>
+                                </imageView>
+                            </subviews>
+                        </stackView>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="fku-If-NTu">
+                            <rect key="frame" x="0.0" y="53" width="198" height="79"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Облачно с прояснениями" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rhn-DH-W7p">
+                                    <rect key="frame" x="0.0" y="0.0" width="198" height="39"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ощущается как +23°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Tu-4c-YpX">
+                                    <rect key="frame" x="0.0" y="40" width="198" height="39"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                </stackView>
+            </subviews>
+            <color key="backgroundColor" name="LightAzure"/>
+            <constraints>
+                <constraint firstItem="jvL-up-ai4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="IVJ-Ue-7Jj"/>
+                <constraint firstAttribute="bottom" secondItem="jvL-up-ai4" secondAttribute="bottom" id="cQC-Yj-e4E"/>
+                <constraint firstAttribute="trailing" secondItem="jvL-up-ai4" secondAttribute="trailing" id="pOS-7s-dTF"/>
+                <constraint firstItem="jvL-up-ai4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="qCH-Z6-4DI"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="131" y="-11"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                    <integer key="value" value="8"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
+            <connections>
+                <outlet property="forecastDescription" destination="Rhn-DH-W7p" id="JGo-E6-itP"/>
+                <outlet property="forecastFeelsLikeTemp" destination="9Tu-4c-YpX" id="nSH-Dr-kdS"/>
+                <outlet property="forecastIcon" destination="aaG-9K-y26" id="EgE-SY-Thi"/>
+                <outlet property="forecastTempLabel" destination="ALk-I4-Zac" id="aIJ-WY-bFI"/>
+            </connections>
+            <point key="canvasLocation" x="-175.57251908396947" y="33.098591549295776"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="cloud.sun" catalog="system" width="128" height="98"/>
+        <namedColor name="LightAzure">
+            <color red="0.71100002527236938" green="0.93200004100799561" blue="0.93200004100799561" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
